<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_app"
    tools:context=".activity_register"
    >
    <LinearLayout
        android:id="@+id/cabezeraLay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allercheck"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="serif"
            app:drawableEndCompat="@drawable/baseline_check_24"
            app:drawableTint="@color/verde"
            />



    </LinearLayout>

    <ImageButton
        android:id="@+id/btnAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fondo_app"
        android:contentDescription="@string/atras"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/lineaLay"
        app:tint="@color/verde"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        />

    <View
        android:id="@+id/lineaLay"
        android:layout_width="match_parent"
        android:background="@color/verde"
        android:layout_height="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/cabezeraLay"
        />


    <TextView
        android:id="@+id/Registre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/registre"
        android:textColor="@color/texto_principal"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lineaLay"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/nom"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/nom_input"
        app:layout_constraintBottom_toBottomOf="@+id/Registre"
        app:layout_constraintStart_toStartOf="@+id/nom_input"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nom_input"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nom"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:errorEnabled="true"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/email"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/email_input"
        app:layout_constraintBottom_toBottomOf="@+id/nom_input"
        app:layout_constraintStart_toStartOf="@+id/email_input"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"


        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/contrasenya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/contrasenya"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contrasenya_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/contrasenya"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/verde"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:text="@string/ya_tienes_cuenta"
        android:textColor="@color/verde"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/Registrarme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/Registrarme"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/verde"
        android:fontFamily="serif"
        android:text="@string/registrarme"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/contrasenya_input" />
</androidx.constraintlayout.widget.ConstraintLayout>