...
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/cabezeraLay"
        />


    <TextView
        android:id="@+id/iniciSessio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/inici_sessi"
        android:textColor="@color/texto_principal"
        android:textSize="38sp"
...
